--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.tc.module</groupId>
-  <artifactId>tc-neuronal-network</artifactId>
+  <artifactId>tc-neuronal-network-module</artifactId>
   <name>${project.artifactId}-${project.version}</name>
   <packaging>pom</packaging>
   <version>0.1.0-SNAPSHOT</version>
@@ -9,16 +9,16 @@
   <parent>
     <groupId>org.tc.parent</groupId>
     <artifactId>tc-parent</artifactId>
-    <version>0.7.0-SNAPSHOT</version>
+    <version>0.7.0</version>
   </parent>
 
   <modules>
   	<module>tc-osgi-bundle-neuronal-network-metamodel-interfaces</module>
 	<module>tc-osgi-bundle-neuronal-network-core-interfaces</module>
-	<module>tc-osgi-bundle-neuronal-network-kohonen-interfaces</module>
+<!-- 	<module>tc-osgi-bundle-neuronal-network-kohonen-interfaces</module> -->
 	<module>tc-osgi-bundle-neuronal-network-metamodel</module>
 	<module>tc-osgi-bundle-neuronal-network-core</module>
-	<module>tc-osgi-bundle-neuronal-network-kohonen</module>
+<!-- 	<module>tc-osgi-bundle-neuronal-network-kohonen</module> -->
    </modules>
   
  
