--- a/tc-osgi-bundle-neuronal-network-core/pom.xml
+++ b/tc-osgi-bundle-neuronal-network-core/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.tc.osgi.bundle</groupId>
+	<groupId>org.tc.osgi.bundle.neuronal-network</groupId>
 	<artifactId>tc-osgi-bundle-neuronal-network-core</artifactId>
 	<name>${project.artifactId}-${project.version}</name>
 	<description>Un bundle pour des reseaux de neuronnes</description>
@@ -17,7 +17,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.tc.osgi.bundle</groupId>
+			<groupId>org.tc.osgi.bundle.neuronal-network</groupId>
 			<artifactId>tc-osgi-bundle-neuronal-network-metamodel-interfaces</artifactId>
 			<version>${neuronal.network.core.interfaces.version}${snapshot}</version>
 			<type>bundle</type>
@@ -25,50 +25,58 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.tc.osgi.bundle</groupId>
+			<groupId>org.tc.osgi.bundle.utils</groupId>
 			<artifactId>tc-osgi-bundle-utils-interfaces</artifactId>
 			<version>${utils.interfaces.version}${snapshot}</version>
 			<type>bundle</type>
 			<classifier>assembly</classifier>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.tc.osgi.bundle</groupId>
-			<artifactId>tc-osgi-bundle-utils</artifactId>
-			<version>0.2.7-SNAPSHOT</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.tc.osgi.bundle</groupId> -->
+<!-- 			<artifactId>tc-osgi-bundle-utils</artifactId> -->
+<!-- 			<version>0.2.7-SNAPSHOT</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.10</version>
 		</dependency>
 	</dependencies>
 
 	<parent>
-		<groupId>org.tc</groupId>
-		<artifactId>tc-osgi-neuronal-network</artifactId>
-		<version>0.1.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<groupId>org.tc.parent</groupId>
+		<artifactId>tc-osgi-parent</artifactId>
+		<version>0.7.0</version>
 	</parent>
 
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>2.3.7</version>
-				<extensions>true</extensions>
 				<configuration>
 					<instructions>
-						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Version>${project.version}</Bundle-Version>
-						<Bundle-Vendor>TC</Bundle-Vendor>
-						<Bundle-Localization>plugin</Bundle-Localization>
+						<Bundle-Activator>org.tc.osgi.bundle.apt.io.module.activator.AptIoActivator</Bundle-Activator>
 					</instructions>
 				</configuration>
 			</plugin>
-
+<!-- 			<plugin> -->
+<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 				<artifactId>maven-assembly-plugin</artifactId> -->
+<!-- 			</plugin> -->
+<!-- 			<plugin> -->
+<!-- 				<artifactId>jdeb</artifactId> -->
+<!-- 				<groupId>org.vafer</groupId> -->
+<!-- 			</plugin> -->
 		</plugins>
 	</build>
 
