--- a/tc-osgi-bundle-neuronal-network-metamodel/pom.xml
+++ b/tc-osgi-bundle-neuronal-network-metamodel/pom.xml
@@ -9,14 +9,14 @@
 	<version>${build}${snapshot}</version>
 
 	<properties>
-		<build>0.1.0</build>
+		<build>0.11.0</build>
 		<snapshot>-SNAPSHOT</snapshot>
 	</properties>
 
 	<parent>
 		<groupId>org.tc.parent</groupId>
 		<artifactId>tc-osgi-parent</artifactId>
-		<version>0.7.0</version>
+		<version>0.11.0-SNAPSHOT</version>
 	</parent>
 
 	<build>
